# ros_elrs_joy

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  colcon_defaults.yaml
.devcontainer/: Dockerfile  devcontainer.json
elrs_joy/: CMakeLists.txt  package.xml
elrs_joy_crsf_node/: CMakeLists.txt  package.xml
elrs_joy_crsf_node/include/elrs_joy_crsf_node/: crsf_joy_node.hpp  diagnostic.hpp  joystick_controller.hpp
elrs_joy_crsf_node/include/elrs_joy_crsf_node/comm/: port.hpp  serial_port.hpp
elrs_joy_crsf_node/src/: crsf_main.cpp
elrs_joy_crsf_protocol/: CMakeLists.txt  package.xml
elrs_joy_crsf_protocol/include/elrs_joy_crsf_protocol/: encoding.hpp  frame.hpp  frame_parser.hpp  frame_parsing.hpp  payload.hpp  serialization.hpp
elrs_joy_crsf_protocol/src/: frame.cpp  serialization.cpp
elrs_joy_crsf_protocol/test/: test_crsf_frame.cpp  test_crsf_protocol.cpp  test_crsf_serialization.cpp  test_frame_parsing.cpp  test_main.cpp
